# devops-engineer-from-scratch-project-313

./: .gitignore  Docckerfile  Dockerfile  Makefile  README.md  main.py  nginx.config  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  hexlet-check.yml
src/: main.py  test_main.py
src/database/: connect_db.py  model_link.py
src/services/: link_service.py
src/services/utils/: get_range.py
src/utils/: make_short_url.py  validators.py
tests/: conftest.py  test.db  test_routes.py
tests/units/: test_get_range.py
